# hermes

./: Cargo.toml  banner.txt
projectconfigs/: cce.json  settings.json
src/: banner.rs  bootstrap.rs  lib.rs  main.rs  profiles.rs  project.rs  settings.rs  test.txt
