[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clap_repl"
path = "src/lib.rs"

[dependencies]
syn = "^2.0.24"
clap = { version = "4.3.5", features = ["derive"] }
console = "0.15.7"
rustyline = "11.0.0"
shlex = "1.1.0"
inquire = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
